--- a/style.css
+++ b/style.css
@@ -3,9 +3,11 @@ body {
     color: rgb(45, 45, 45);
     padding: 10px;
     font-family: arial;
+    background-image: url("https://i.pinimg.com/originals/b2/29/1c/b2291c7633bcfe69cb7b3b7ba0d814ab.jpg")
+
 }
 #all-contents {
-  max-width: 800px;
+  max-width: 500px;
     margin: auto;
 }
 
@@ -45,7 +47,7 @@ a {
 
 /* main container area beneath menu */
 main {
-    background: rgb(10, 166, 26);
+    background: rgb(207, 10, 207);
     display: flex;
     border-radius:60px 60px 60px 60px;
 }
@@ -56,7 +58,7 @@ main {
 .sidebar-img {
     width: 180px;
     border-radius: 150%;
-    border: 12px solid rgb(192, 67, 192);
+    border: 12px solid rgb(121, 1, 121);
 }
 .content {
     flex: 1;
@@ -72,3 +74,78 @@ main {
 h2, h3 {
     margin: 0px;
 }
+
+         /* portfolio styles */
+         .content h1 {
+            color: black;
+        }
+
+        #portfolio {
+            list-style-type: none;
+            padding-left: 0;
+        }
+
+        #portfolio li {
+            background: #fff;
+            padding: 10px;
+            border-radius: 10px;
+            margin-bottom: 10px;
+        }
+
+        #portfolio li:hover {
+            background: #eee;
+        }
+
+        #portfolio a {
+            text-decoration: none;
+            color: #454545;
+        }
+                    /* responsive web design */
+                    @media screen and (min-width: 120px) and (max-width: 1080px) {
+                        main {
+                          height: 100ch;
+                          zoom: 1.5;
+                          display: grid;
+                        }
+          
+                        h1 {
+                          font-size: 44px;
+                        }
+          
+                        h2 {
+                          font-size: 42px;
+                        }
+          
+                        h3 {
+                          font-size: 36px;
+                        }
+          
+                        #all-contents {
+                          height: 100ch;
+                          margin: none;
+                        }
+          
+                        a {
+                          font-size: 42px;
+                        }
+          
+                        .sidebar {
+                          margin-right: 0px;
+                          justify-content: center;
+                          align-items: center;
+                        }
+          
+                        .sidebar-img {
+                          width: 100%;
+                        }
+          
+                        p,
+                        li {
+                          font-size: 24px;
+                        }
+          
+                        .content {
+                          align-content: center;
+                          justify-content: center;
+                        }
+                    }
