--- a/projects/platformer/platformer.css
+++ b/projects/platformer/platformer.css
@@ -3,7 +3,10 @@ body {
 }
 
 canvas {
-  background-color: lightgray;
+  background-image: url(https://cdn.wallpapersafari.com/55/13/7XJ9l8.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  
 }
 
 img {
