--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     color: rgb(45, 45, 45);
     padding: 10px;
     font-family: arial;
-    background-image: url("https://i.pinimg.com/originals/b2/29/1c/b2291c7633bcfe69cb7b3b7ba0d814ab.jpg")
+    background-image: url("https://wallpapers.com/images/hd/3440x1440p-oled-background-y8mv6c3p38spq6ce.jpg")
 
 }
 #all-contents {
